--- a/.github/workflows/terraform_aks.yaml
+++ b/.github/workflows/terraform_aks.yaml
@@ -4,11 +4,22 @@ on:
     branches:
       - master
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: 'Az CLI login'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
@@ -27,3 +38,9 @@ jobs:
       - name: Terraform apply
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         run: terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
+
+      - name: Get kubeconfig
+        run: |
+          kubeconfig=$(terraform output -raw kube_config)
+          echo "$kubeconfig" | base64 --decode > kubeconfig.yaml
+        shell: bash
