--- a/.github/workflows/terraform_aks.yaml
+++ b/.github/workflows/terraform_aks.yaml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: print values
+        run: |
+          cat ${{ secrets.AZURE_CLIENT_ID }}
+          cat ${{ secrets.ARM_TENANT_ID }}
+          cat ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
       - name: 'Az CLI login'
         uses: azure/login@v1
         with:
