--- a/.github/workflows/terraform_aks.yaml
+++ b/.github/workflows/terraform_aks.yaml
@@ -4,28 +4,16 @@ on:
     branches:
       - master
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   terraform:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: print values
-        run: |
-          echo ${{ secrets.AZURE_CLIENT_ID }}
-          echo ${{ secrets.ARM_TENANT_ID }}
-          echo ${{ secrets.ARM_SUBSCRIPTION_ID }}
-
-      - name: 'Az CLI login'
+      - name: Log in with Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
