--- a/.github/workflows/terraform_aks.yaml
+++ b/.github/workflows/terraform_aks.yaml
@@ -27,11 +27,11 @@ jobs:
         run: terraform validate
 
       - name: Terraform plan
-        run: terraform plan -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}}
+        run: terraform plan -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -var ssh_public_key= ${{secrets.SSH_PUBLIC_KEY}}
 
       - name: Terraform apply
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
+        run: terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -var ssh_public_key= ${{secrets.SSH_PUBLIC_KEY}} -auto-approve 
 
       - name: Get kubeconfig
         run: |
