--- a/.github/workflows/terraform_aks.yaml
+++ b/.github/workflows/terraform_aks.yaml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Set Terraform variables
         run: |
+          export TF_LOG=trace
           export TF_VAR_ssh_public_key="${{ secrets.SSH_PUBLIC_KEY }}"
       
 
