--- a/.github/workflows/terraform_aks_destroy.yaml
+++ b/.github/workflows/terraform_aks_destroy.yaml
@@ -1,5 +1,7 @@
 name: Terraform destroy
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
@@ -16,9 +18,9 @@ jobs:
         with:
           terraform_version: "1.1.4"
       - name: Set Terraform variables
-      run: |
-        cd aks_terraform/
-        export TF_VAR_ssh_public_key="${{ secrets.SSH_PUBLIC_KEY }}"
-        terraform plan -destroy -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} \
-          -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}}
-        terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
+        run: |
+          cd aks_terraform/
+          export TF_VAR_ssh_public_key="${{ secrets.SSH_PUBLIC_KEY }}"
+          terraform plan -destroy -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} \
+            -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}}
+          terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
