update github workflows

--- a/.github/workflows/terraform_aks_destroy.yaml
+++ b/.github/workflows/terraform_aks_destroy.yaml
@@ -22,6 +22,6 @@ jobs:
           cd aks_terraform/
           export TF_VAR_ssh_public_key="${{ secrets.SSH_PUBLIC_KEY }}"
           terraform init
-          terraform plan -destroy -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} \
+          terraform destroy -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} \
             -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}}
-          terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
+# terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
