--- a/.github/workflows/terraform_aks_destroy.yaml
+++ b/.github/workflows/terraform_aks_destroy.yaml
@@ -23,5 +23,5 @@ jobs:
           export TF_VAR_ssh_public_key="${{ secrets.SSH_PUBLIC_KEY }}"
           terraform init
           terraform destroy -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} \
-            -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}}
+            -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve
 # terraform apply  -var aks_service_principal_app_id=${{secrets.AKS_SERVICE_PRINCIPAL_APP_ID}} -var aks_service_principal_client_secret=${{secrets.AKS_SERVICE_PRINCIPAL_CLIENT_SECRET}} -auto-approve 
