--- a/.github/workflows/server-docker.yaml
+++ b/.github/workflows/server-docker.yaml
@@ -20,12 +20,16 @@ jobs:
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_PASSWORD }}
 
+    - name: Set time
+      run: |
+        echo "time=$(date --date="$(date +'%Y-%m-%d %H:%M:%S')" +%s)" >> $GITHUB_ENV
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: server/
         push: true
-        tags: quay.io/vipul05/azure_learning:${{ github.sha }}
+        tags: quay.io/vipul05/azure_learning:${{ env.time }}
 
     - name: Log in with Azure
       uses: azure/login@v1
@@ -41,7 +45,7 @@ jobs:
       run: |
         github_sha=${{ github.sha }}
         echo ${github_sha}
-        kubectl patch deployment api -p '{"spec":{"template":{"spec":{"containers":[{"name":"api-server","image":"quay.io/vipul05/azure_learning:echo ${github_sha}"}]}}}}'
+        kubectl patch deployment api -p '{"spec":{"template":{"spec":{"containers":[{"name":"api-server","image":"quay.io/vipul05/azure_learning:${{ env.time }}"}]}}}}'
 #kubectl apply -f deployment.yaml
 
     
